shaneworld/force-app/main/default/objects/Card_Set__c/Card_Set__c.object-meta.xml
<CustomObject>
    <label>Card Set</label>
    <nameField>
        <label>Card Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Card Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>