shaneworld/force-app/main/default/objects/Card_Set__c/fields/Set_Code__c.field-meta.xml
<CustomField>
    <fullName>Set_Code__c</fullName>
    <label>Set Code</label>
    <length>60</length>
    <type>Text</type>
</CustomField>