shaneworld/force-app/main/default/objects/Card_Set__c/fields/Set_Price__c.field-meta.xml
<CustomField>
    <fullName>Set_Price__c</fullName>
    <label>Set Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>