shaneworld/force-app/main/default/objects/Card_Set__c/fields/Set_Rarity_Code__c.field-meta.xml
<CustomField>
    <fullName>Set_Rarity_Code__c</fullName>
    <label>Set Rarity Code</label>
    <length>60</length>
    <type>Text</type>
</CustomField>