shaneworld/force-app/main/default/objects/Card_Set__c/fields/YuGiOh_Card__c.field-meta.xml
<CustomField>
    <fullName>YuGiOh_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>YuGiOh Card</label>
    <referenceTo>YuGiOh_Card__c</referenceTo>
    <relationshipLabel>Card Sets</relationshipLabel>
    <relationshipName>Card_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>